--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiofiles==23.2.1
 aiohttp==3.9.1
 aiosignal==1.3.1
+aiosmtplib==3.0.1
 annotated-types==0.6.0
 anyio==4.2.0
 attrs==23.2.0
@@ -10,20 +11,28 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 colorama==0.4.6
 distro==1.9.0
+et-xmlfile==1.1.0
 frozenlist==1.4.1
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.26.0
 idna==3.6
 multidict==6.0.4
+numpy==1.26.3
 openai==1.7.2
+openpyxl==3.1.2
+pandas==2.1.4
 pydantic==2.5.3
 pydantic_core==2.14.6
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3.post1
 requests==2.31.0
+six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
 tqdm==4.66.1
 typing_extensions==4.9.0
+tzdata==2023.4
 urllib3==2.1.0
 yarl==1.9.4
